--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial;
 }
 #sudoku {
+    float: left;
     border-collapse: collapse;
     border-right: 5px solid black;
     border-bottom: 5px solid black;
@@ -43,12 +44,19 @@ body {
 .inp {
     position: absolute;
     font-size: 2em;
-    width: 100px;
+    width: 95px;
     height: 75px;
     text-align: center;
     margin: 0 auto;
 }
 
 #options {
-    float: right;
+    float: left;
+    margin-left: 10px;
+}
+#options h1 {
+    margin-top: 0;
+}
+#options label[title] {
+    border-bottom: 1px dotted black;
 }
